
Version 1.24  2009-12-15
 * call php_fdfs_close with TSRMLS_CC as php_fdfs_close(i_obj TSRMLS_CC)
 * storage server to storage server report ip address as tracker client

Version 1.23  2009-11-29
 * remove unuseless variable "sleep_secs" in tracker_report_thread_entrance
 * storage can bind an address when connect to other servers (as a client)
 * common/md5.h fix UINT4 typedef wrong type in 64 bit OS
 * client/fdfs_test.c: print the source ip address decoded from the remote 
   filename
 * client add function fdfs_get_file_info
 * php extension add functions: fastdfs_http_gen_token and fastdfs_get_file_info
 * server process will exit when the http service starts fail
 * support file group, a master file with many slave files whose file id can be 
   combined from master file id and prefix
 * php client support uploading slave file
 * ip address in filename change from host byte order to network byte order
 * storage sync performance enhancement, using read buffer of 64KB to avoid 
   reading binlog file repeatly
 * storage add prototol cmd: STORAGE_PROTO_CMD_QUERY_FILE_INFO
 * FDFS_FILE_EXT_NAME_MAX_LEN changed from 5 to 6
 * get file info support slave file
 * storage server for uploading file support priority

Version 1.22  2009-10-12
 * bug fixed: common/shared_func.c allow_hosts array maybe overflow in some case
 * tracker/tracker_mem.c: protocol TRACKER_PROTO_CMD_SERVICE_QUERY_FETCH_ALL, 
   return at least a storage server when active storage 
   server count of the group > 0
 * bug fixed: when client connection disconnected, always log debug or error info
 * make.sh: default not install FastDFS services in Linux server
 * common/sockopt.c: setsockopt level SOL_TCP only supported in Linux
 * common/http_func.c: do not use function strsep because strsep is not portable
 * client upload file support callback function
 * client support multi tracker groups (multi FastDFS clusters)
 * bug fixed: thread_stack_size not correct when the param thread_stack_size 